--- a/views/index.html
+++ b/views/index.html
@@ -12514,7 +12514,7 @@
             </select></center>
     </td>
   </tr>
-  <tr id="saias_tool_dasa_TOGAF (select 5 for level if certified">
+  <tr id="saias_tool_dasa_TOGAF (select 5 for level if certified)">
     <td style="border-left: 1px solid #595959; border-right: 1px solid #808080" height="21" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#404040">TOGAF (select 5 for level if certified)</font></td>
         <td style="border-left: 1px solid #808080; border-right: 1px solid #808080" align="left" valign=bottom bgcolor="#FFFFFF">
       <center><select class="select form-control">
