--- a/views/index.html
+++ b/views/index.html
@@ -121,17 +121,17 @@ p{
             <div class="wrapper">
 
                 <div class="form-group">
-                    <label for="usr"><h4>Please Enter Your Name :</h4></label>
-                    <input type="text" class="form-control" id="usr">
+                    <label for="user"><h4>Please Enter Your Name :</h4></label>
+                    <input type="text" class="form-control" id="user" required>
                 </div>
 
                 <span class="group-btn">    
-                  <a style="max-width:226px;" href="#" class="button" id = 'communityAnalyticsButton' onclick="showCommunityAnalytics();">Community Analytics <i class="fa fa-sign-in"></i></a>
+                  <a style="max-width:226px;" href="#" class="button" id = 'communityAnalyticsButton' onclick="showCommunityAnalytics()">Community Analytics <i class="fa fa-sign-in"></i></a>
                 </span>
                 <br>
                 <br>
                 <span class="group-btn">    
-                  <a href="#" style="max-width:226px;" class="button" id = 'communityTransformationButton' onclick="showCommunityTransformation();">Community Transformation <i class="fa fa-sign-in"></i></a>
+                  <a href="#" style="max-width:226px;" class="button" id = 'communityTransformationButton' onclick="showCommunityTransformation()">Community Transformation <i class="fa fa-sign-in"></i></a>
                 </span>
             </div>
         </div>
