--- a/views/analytics.html
+++ b/views/analytics.html
@@ -15,11 +15,40 @@
     a.comment-indicator:hover + comment { background:#ffd; position:absolute; display:block; border:1px solid black; padding:0.5em;  } 
     a.comment-indicator { background:red; display:inline-block; border:1px solid black; width:0.5em; height:0.5em;  } 
     comment { display:none;  } 
+    .block{
+      background: #36a1d5; /* Old browsers */
+      background: -moz-linear-gradient(top, #36a1d5 0%, #3073b4 100%); /* FF3.6-15 */
+      background: -webkit-linear-gradient(top, #36a1d5 0%,#3073b4 100%); /* Chrome10-25,Safari5.1-6 */
+      background: linear-gradient(to bottom, #36a1d5 0%,#3073b4 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#36a1d5', endColorstr='#3073b4',GradientType=0 );
+      padding: 10px 20px 30px 20px;
+    }
+    .block-center {
+      max-width: 420px;
+      margin: 0 auto;
+      width: 100%;
+    }
+
+
+    p{
+        font-size: 30px;
+        text-align: center;
+        /*color: white;*/
+        color: #2196f3;
+        margin: 24px 0;
+        font-family: "Roboto",arial,sans-serif;
+    }
+    .wrapper {
+        text-align: center;
+    }
   </style>
 </head>    
 <body>
   <body>
-<h1>Analytics Skills Survey</h1>
+  <div class="block-center">
+    <p>REVEL<br> Analytics Skills Survey</p>
+</div>
+<h1></h1>
 <table id="surveyTable" align="center" cellspacing="0" border="1">
   <colgroup width="570"></colgroup>
   <colgroup width="160"></colgroup>
@@ -16169,6 +16198,12 @@
     </td>
   </tr>
 </table>
-<button onclick="addEmpSkill()">Submit</button>
+<div class="container">
+  <div class="row">
+    <div id="button">
+      <button onclick="addEmpSkill()" style="margin-bottom: 20px; margin-top: 20px;">Submit</button>
+    </div>
+  </div>
+</div>
 </body>
 </html>
