--- a/views/index.html
+++ b/views/index.html
@@ -116,7 +116,6 @@ p{
   <div id = "mainPage">
     <div>
         <div class="block-center">
-            <h4 style="text-align: center; height: 115px; margin-top: 0px;" > <img src="http://www.firescope.com/images/Logos/Integration/Cisco.png" style="color: white; max-width:226px;"></h4>
             <p>REVEL<br> Talent Optimization</p>
             <div class="wrapper">
 
@@ -126,12 +125,12 @@ p{
                 </div>
 
                 <span class="group-btn">    
-                  <a style="max-width:226px;" href="#" class="button" id = 'communityAnalyticsButton' onclick="showCommunityAnalytics()">Community Analytics <i class="fa fa-sign-in"></i></a>
+                  <a style="max-width:226px;" href="#" class="button" id = 'communityAnalyticsButton' onclick="showCommunityAnalytics()">Analytics Community <i class="fa fa-sign-in"></i></a>
                 </span>
                 <br>
                 <br>
                 <span class="group-btn">    
-                  <a href="#" style="max-width:226px;" class="button" id = 'communityTransformationButton' onclick="showCommunityTransformation()">Community Transformation <i class="fa fa-sign-in"></i></a>
+                  <a href="#" style="max-width:226px;" class="button" id = 'communityTransformationButton' onclick="showCommunityTransformation()"> Transformation Community <i class="fa fa-sign-in"></i></a>
                 </span>
             </div>
         </div>
