updated code for human

--- a/views/analytics.html
+++ b/views/analytics.html
@@ -9851,8 +9851,8 @@
     </td>
   </tr>
   <tr id="aa_cp_aa_Multi-Touch Attribution Models">
-    <td style="border-left: 1px solid #808080; border-right: 1px solid #808080" height="21" align="left" valign=bottom bgcolor="#FF4100"><font face="Arial" color="#FFFFFF">Multi-Touch Attribution Models</font></td>
-    <td style="border-left: 1px solid #808080; border-right: 1px solid #808080" align="left" valign=bottom bgcolor="#FF4100">
+    <td style="border-left: 1px solid #808080; border-right: 1px solid #808080" height="21" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#404040">Multi-Touch Attribution Models</font></td>
+    <td style="border-left: 1px solid #808080; border-right: 1px solid #808080" align="left" valign=bottom bgcolor="#FFFFFF">
       <center><select class="select form-control">
                    <option value="Project Experience">
                     Project Experience
@@ -9865,7 +9865,7 @@
                    </option>
             </select></center>
     </td>
-    <td style="border-right: 1px solid #808080" align="right" valign=bottom bgcolor="#FF4100" sdval="4" sdnum="1033;">
+    <td style="border-right: 1px solid #808080" align="right" valign=bottom bgcolor="#FFFFFF" sdval="4" sdnum="1033;">
       <center><select class="select form-control">
                    <option disabled selected value>
                    -- select your Level -- 
@@ -9887,7 +9887,7 @@
                    </option>
             </select></center>
     </td>
-    <td style="border-right: 1px solid #808080" align="left" valign=bottom bgcolor="#FF4100">
+    <td style="border-right: 1px solid #808080" align="left" valign=bottom bgcolor="#FFFFFF">
       <center><select class="select form-control">
                    <option value="NO">
                     NO
@@ -9897,7 +9897,7 @@
                    </option>
             </select></center>
     </td>
-    <td style="border-right: 1px solid #808080" align="left" valign=bottom bgcolor="#FF4100">
+    <td style="border-right: 1px solid #808080" align="left" valign=bottom bgcolor="#FFFFFF">
       <center><select class="select form-control">
                    <option value="NO">
                     NO
