updated for transformation

--- a/views/transformation.html
+++ b/views/transformation.html
@@ -6936,7 +6936,7 @@
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" colspan=7 height="20" align="left" valign=bottom bgcolor="#404040"><font face="Arial" color="#FFFFFF">General</font></td>
 		
 	</tr>
-	<tr id="de_c_gen_Platform Architecture Design & Definition">
+	<tr id="de_cp_gen_Platform Architecture Design & Definition">
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" height="20" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000">Platform Architecture Design &amp; Definition</font></td>
 				<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
@@ -7006,7 +7006,7 @@
 	    </td>
 		
 	</tr>
-	<tr id="de_c_gen_Platform Evaluation & Selection">
+	<tr id="de_cp_gen_Platform Evaluation & Selection">
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" height="20" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000">Platform Evaluation &amp; Selection</font></td>
 				<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
@@ -7076,7 +7076,7 @@
 	    </td>
 		
 	</tr>
-	<tr id="de_c_gen_Enterprise Architecture Design & Definition">
+	<tr id="de_cp_gen_Enterprise Architecture Design & Definition">
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" height="20" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000">Enterprise Architecture Design &amp; Definition</font></td>
 				<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
@@ -7146,7 +7146,7 @@
 	    </td>
 		
 	</tr>
-	<tr id="de_c_gen_Buy vs. Build Assessments">
+	<tr id="de_cp_gen_Buy vs. Build Assessments">
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" height="20" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000">Buy vs. Build Assessments</font></td>
 				<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
@@ -7216,7 +7216,7 @@
 	    </td>
 		
 	</tr>
-	<tr id="de_c_gen_Functional Architecture Design & Definition">
+	<tr id="de_cp_gen_Functional Architecture Design & Definition">
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" height="20" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000">Functional Architecture Design &amp; Definition</font></td>
 				<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
@@ -7286,7 +7286,7 @@
 	    </td>
 		
 	</tr>
-	<tr id="de_c_gen_Technical Integration Design & Implementation">
+	<tr id="de_cp_gen_Technical Integration Design & Implementation">
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" height="20" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000">Technical Integration Design &amp; Implementation</font></td>
 				<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
@@ -7356,7 +7356,7 @@
 	    </td>
 		
 	</tr>
-	<tr id="de_c_gen_Technical Specification Documentation">
+	<tr id="de_cp_gen_Technical Specification Documentation">
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" height="20" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000">Technical Specification Documentation</font></td>
 				<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
@@ -7426,7 +7426,7 @@
 	    </td>
 		
 	</tr>
-	<tr id="de_c_gen_Java / J2EE Development">
+	<tr id="de_cp_gen_Java / J2EE Development">
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" height="20" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000">Java / J2EE Development</font></td>
 				<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
@@ -7496,7 +7496,7 @@
 	    </td>
 		
 	</tr>
-	<tr id="de_c_gen_C# / .Net Development">
+	<tr id="de_cp_gen_C# / .Net Development">
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" height="20" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000">C# / .Net Development</font></td>
 				<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
@@ -7565,7 +7565,7 @@
 	            </select></center>
 	    </td>
 	</tr>
-	<tr id="de_c_gen_Scripting Technologies (Specify)">
+	<tr id="de_cp_gen_Scripting Technologies (Specify)">
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" height="20" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000">Scripting Technologies (Specify)</font></td>
 				<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
@@ -7635,7 +7635,7 @@
 	    </td>
 		
 	</tr>
-	<tr id="de_c_gen_Mobile App Development (Hybrid/Native, Specify)">
+	<tr id="de_cp_gen_Mobile App Development (Hybrid/Native, Specify)">
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" height="20" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000">Mobile App Development (Hybrid/Native, Specify)</font></td>
 				<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
@@ -7705,7 +7705,7 @@
 	    </td>
 		
 	</tr>
-	<tr id="de_c_gen_E-Commerce Catalog Design & Definition">
+	<tr id="de_cp_gen_E-Commerce Catalog Design & Definition">
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" height="20" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000">E-Commerce Catalog Design &amp; Definition</font></td>
 				<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
@@ -7775,7 +7775,7 @@
 	    </td>
 		
 	</tr>
-	<tr id="de_c_gen_End-to-End Testing">
+	<tr id="de_cp_gen_End-to-End Testing">
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" height="20" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000">End-to-End Testing</font></td>
 				<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
@@ -7845,7 +7845,7 @@
 	    </td>
 		
 	</tr>
-	<tr id="de_c_gen_Performance Testing">
+	<tr id="de_cp_gen_Performance Testing">
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" height="20" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000">Performance Testing</font></td>
 				<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
